# feature-store-fraud-detection

./: .gitignore  README.md  fraud_model.pth  requirements.txt
back_end/: .dockerignore  .env.sample  .env.test  .gitignore  Dockerfile  README.md  docker-compose.yml  fraud_model.pth  pyproject.toml  requirements.txt
back_end/app/: client.py  generation_pipeline.py  main.py
back_end/app/middleware/: logging.py
back_end/app/model/: main.py
back_end/app/routes/: feature.py
back_end/app/schemas/: feature.py
back_end/app/test/: db_test.py
back_end/app/types/: response.py
back_end/data/: load_data.py
back_end/data/output_features/: .part-00000-57816768-1bd6-4a18-918e-545caf4e0948-c000.csv.crc  .part-00000-87694842-8ac5-448f-ab44-a6ccf6375356-c000.csv.crc  .part-00000-9b0c969c-ee6e-4771-8d82-7740f48ae94a-c000.csv.crc  .part-00000-a9865ee4-a26c-4e9e-8958-de1a5c1d1eab-c000.csv.crc  .part-00000-af9cd4c8-d0d1-4c43-bd70-280cb06cc8f0-c000.csv.crc  .part-00000-b8f3c477-ec75-4aed-ad77-274a0cf70b49-c000.csv.crc  .part-00001-57816768-1bd6-4a18-918e-545caf4e0948-c000.csv.crc  .part-00001-87694842-8ac5-448f-ab44-a6ccf6375356-c000.csv.crc  .part-00001-9b0c969c-ee6e-4771-8d82-7740f48ae94a-c000.csv.crc  .part-00001-a9865ee4-a26c-4e9e-8958-de1a5c1d1eab-c000.csv.crc  .part-00001-af9cd4c8-d0d1-4c43-bd70-280cb06cc8f0-c000.csv.crc  .part-00001-b8f3c477-ec75-4aed-ad77-274a0cf70b49-c000.csv.crc  .part-00002-57816768-1bd6-4a18-918e-545caf4e0948-c000.csv.crc  .part-00002-87694842-8ac5-448f-ab44-a6ccf6375356-c000.csv.crc  .part-00002-9b0c969c-ee6e-4771-8d82-7740f48ae94a-c000.csv.crc  .part-00002-a9865ee4-a26c-4e9e-8958-de1a5c1d1eab-c000.csv.crc  .part-00002-af9cd4c8-d0d1-4c43-bd70-280cb06cc8f0-c000.csv.crc  .part-00002-b8f3c477-ec75-4aed-ad77-274a0cf70b49-c000.csv.crc  .part-00003-57816768-1bd6-4a18-918e-545caf4e0948-c000.csv.crc  .part-00003-87694842-8ac5-448f-ab44-a6ccf6375356-c000.csv.crc  .part-00003-9b0c969c-ee6e-4771-8d82-7740f48ae94a-c000.csv.crc  .part-00003-a9865ee4-a26c-4e9e-8958-de1a5c1d1eab-c000.csv.crc  .part-00003-af9cd4c8-d0d1-4c43-bd70-280cb06cc8f0-c000.csv.crc  .part-00003-b8f3c477-ec75-4aed-ad77-274a0cf70b49-c000.csv.crc  .part-00004-57816768-1bd6-4a18-918e-545caf4e0948-c000.csv.crc  .part-00004-87694842-8ac5-448f-ab44-a6ccf6375356-c000.csv.crc  .part-00004-9b0c969c-ee6e-4771-8d82-7740f48ae94a-c000.csv.crc  .part-00004-a9865ee4-a26c-4e9e-8958-de1a5c1d1eab-c000.csv.crc  .part-00004-af9cd4c8-d0d1-4c43-bd70-280cb06cc8f0-c000.csv.crc  .part-00004-b8f3c477-ec75-4aed-ad77-274a0cf70b49-c000.csv.crc  .part-00005-57816768-1bd6-4a18-918e-545caf4e0948-c000.csv.crc  .part-00005-87694842-8ac5-448f-ab44-a6ccf6375356-c000.csv.crc  .part-00005-9b0c969c-ee6e-4771-8d82-7740f48ae94a-c000.csv.crc  .part-00005-a9865ee4-a26c-4e9e-8958-de1a5c1d1eab-c000.csv.crc  .part-00005-af9cd4c8-d0d1-4c43-bd70-280cb06cc8f0-c000.csv.crc  .part-00005-b8f3c477-ec75-4aed-ad77-274a0cf70b49-c000.csv.crc  .part-00006-57816768-1bd6-4a18-918e-545caf4e0948-c000.csv.crc  (+19 more)
back_end/feature_store/: batch_processing.py  insert_offline.py
back_end/flows/: baseline_flow.py  featurestore_flow.py  inference_experiment.py  training_experiment.py
back_end/model/: fraud_model.pth  main.py  training.py
back_end/plot/: plot_metrics.py  plot_time.py
back_end/prisma/: schema.prisma
feature_store/: batch_processing.py
(+12 files in other folders)
