[tool.poetry]
name = "fastapi-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"

# Core dependencies
fastapi = "^0.115.12"
uvicorn = "^0.34.0"
pydantic = "^2.11.1"
python-jose = "^3.3.0"
passlib = "^1.7.4"
python-multipart = "^0.0.6"
bcrypt = "^4.0.1"
python-dotenv = "^1.1.0"

# AI and Langchain
openai = "^1.70.0"
langchain = "^0.3.22"
langchain-community = "^0.3.20"
langchain-openai = "^0.3.11"
tiktoken = "^0.9.0"

# Database
psycopg2-binary = "^2.9.9"
redis = "^5.0.1"
sqlalchemy = "^2.0.23"
prisma = "^0.15.0"

# Data processing
pyspark = "^3.5.0"
pandas = "^2.1.3"
numpy = "^1.26.2"
scikit-learn = "^1.3.2"

# Testing
pytest = "^7.4.3"
pytest-cov = "^4.1.0"

# Development
jupyter = "^1.0.0"
black = "^23.11.0"
flake8 = "^6.1.0"
mypy = "^1.7.0"

# Documentation
mkdocs = "^1.5.3"
mkdocs-material = "^9.4.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
