[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"

# Core dependencies
fastapi = "^0.104"
uvicorn = "^0.24"
pydantic = "^2.0"
typing-extensions = "^4.8"
python-jose = "^3.3"
passlib = "^1.7"
python-multipart = "^0.0"
bcrypt = "^4.0"
python-dotenv = "^1.1"

# Database
psycopg2-binary = "^2.9"
redis = "^5.0"
sqlalchemy = "^2.0"
prisma = "^0.15"

# Data processing
pyspark = "^3.5"
pandas = "^2.1"
numpy = "^1.24"
scikit-learn = "^1.3"
apache-beam = "^2.47"
apache-flink = "^1.20"
apache-flink-libraries = "^1.20"
kafka-python = "^2.0"

# Testing
pytest = "^7.4"
pytest-cov = "^4.1"

# Development
jupyter = "^1.0"
jupyterlab = "^3.5"
jupyter-server = "^1.16"
nbclassic = "^0.4"
black = "^23.11"
flake8 = "^6.1"
mypy = "^1.7"

# Documentation
mkdocs = "^1.5"
mkdocs-material = "^9.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
